feat: Status api lambda just reads without updates
Lambda just reads data from parameter store and does no updates since
they are done by bank status updater lambda